service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: app-one
spec:
  ports:
    - port: 8888
      targetPort: 8888
      protocol: TCP
  selector:
    app: app-one
    task: app-one
---
