ingress.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: app-one
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: app1.com
      http:
        paths:
          - path: /app1
            pathType: Prefix
            backend:
              service:
                name: app-one
                port:
                  number: 8888
---
